--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.1",
+    "konva": "^8.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.3",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
